# boed

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
boed/: ade.py  nmc.py
paper/: README.md  helper_functions.py  nmc_jax.py  parallel_evaluation.py  plot_functions.py
paper/lung/: compute_reference.py  maneuvers.py  plot.py  probabilistic_model.py  run.py
paper/lung/output/: ade.pickle  reference_eig.pickle  sdc.pickle  sdc_crn.pickle
paper/pharmacokinetic/: compute_reference.py  plot.py  probabilistic_model.py  run.py
paper/pharmacokinetic/output/: reference_eig.pickle  sdc.pickle  sdc_crn.pickle
paper/synthetic/: plot.py  probabilistic_model.py  run.py
paper/synthetic/output/: sdc.pickle  sdc_crn.pickle
paper/tables/: reference_eig_lung.tex  reference_eig_pharmacokinetic.tex  reference_eig_viscoplastic.tex  true_eig_synthetic.tex
paper/viscoplastic/: compute_reference.py  plot.py  probabilistic_model.py  run.py
paper/viscoplastic/output/: reference_eig.pickle  sdc_crn.pickle
